Version 3.1.4
- Fixed file download URL in FileAsset#url (missing path=)
- Remove registry of PDF mime type as not needed
Version 3.1.3 - 04-22-2013
- Don't allow a user to have email that conflicts with username of another user.
- Only reset password based on email address, not username also.
- Upgrade migration to add queue column to delayed_jobs table
- Added job tracker to expired session job
Version 3.1.2 - 03-14-2013
- Minor enhancements to capabilities
- Added scope for stylesheets to has_file_assets
Version 3.1.1 - 02-25-2013
- Added protect_all_instances model security option
- Refactored security queries for improved performance
- Added ability to directly grant instance capability on user
- Bug fixes
Version 3.0.12 - 02-19-2013
- Added protect_all_instances model security option
- Refactored security queries for improved performance
- Added ability to directly grant instance capability on user
Version 3.0.11 - 01-10-2013
- New Security Implementation