@@ -1,6 +1,7 @@
 Version 3.1.4
 - Fixed file download URL in FileAsset#url (missing path=)
 - Remove registry of PDF mime type as not needed
+- Add override to skip sending of activation email on user creation.
 Version 3.1.3 - 04-22-2013
 - Don't allow a user to have email that conflicts with username of another user.
 - Only reset password based on email address, not username also.
